# NeuroShiv

./: .gitignore  CMakeLists.txt  README.md  todo.txt
include/: Activation.hpp  GPUPass.hpp  Layer_b.hpp  Network_b.hpp  SigmoidActivation.hpp  cuda_kernels.h  mnistLoader.hpp  utils.hpp
src/: GPUPass.cu  Layer_b.cpp  Network_b.cpp  cuda_kernels.cu  cuda_test.cu  main.cpp  todo.txt  utils.cpp
